fix scrollbar and color change of primary button

--- a/css/header.css
+++ b/css/header.css
@@ -68,10 +68,10 @@
     font-weight: 600;
     border-radius: 5px;
     color: white;
-    background-color:#7F1AFE;
+    background-color:rgba(127, 26, 254, 1);
 }
 .login-btn:hover{
-    background-color: #933bff;
+    background-color: rgba(127, 26, 254, 0.9);
     transition: 0.6s;
 }
 .mobile{
@@ -127,6 +127,25 @@
     .hamburger.is-active .bar{
         opacity: 0;
     }
+
+    /* <<<<<<<<<<<<<<<<custom Scollbar>>>>>>>>>>>> */
+::-webkit-scrollbar{
+    width: 1.1em;
+}
+::-webkit-scrollbar-track{
+    background-color: #F2F5FA;
+    border-radius: 120px;
+    margin-block: 5px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #1E283C;
+    border-radius: 120px;
+    margin: 2px 0px;
+    border: 2px solid #F2F5FA;
+}
+::-webkit-scrollbar-thumb:hover{
+    background-color: #50668F;
+}
 
 /* ******************* End of Navbar Css*********************** */
 /***********Full View(screen and 1200px)***********/
